# PAPIT

./: .gitignore  AWS_PLAN.md  CLAUDE.md  EXPERIMENT_PLAN.md  PAPIT.pptx  Progress 0316.md  README.md  SUBMISSION.md  colab_papit_demo.ipynb  main.py  pyproject.toml
.claude/: settings.json
docs/: README.md  demo.md  experiment_log.md  roadmap.md  scope_c_postmortem.md
notebooks/: demo.ipynb  eval.ipynb
outputs/: alignment_gqa.csv  alignment_textvqa.csv  alignment_vqav2.csv  distill100k_attn_L16_gqa.csv  distill100k_attn_L16_textvqa.csv  distill100k_attn_L16_vqa_v2.csv  distill100k_attn_L24_gqa.csv  distill100k_attn_L24_textvqa.csv  distill100k_attn_L24_vqa_v2.csv  distill100k_attn_L8_gqa.csv  distill100k_attn_L8_textvqa.csv  distill100k_attn_L8_vqa_v2.csv  distill100k_attn_rollout_gqa.csv  distill100k_attn_rollout_textvqa.csv  distill100k_attn_rollout_vqa_v2.csv  distill_cache_20k_index.csv  distill_eval_gqa.csv  distill_predictor_5k_L16.pt  efficiency_benchmark.csv  efficiency_distill.csv  fastv_oracle_multilayer.csv
papimg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
papit/: __init__.py  __main__.py
report/: PAPIT.tex  ROADMAP.md  cvpr.sty  final_report.7page_backup.tex  final_report.tex  progress_report.tex  references.bib
scripts/: build_distill_cache.py  build_distill_cache_multi.py  download_data.sh  eval_distill.py  fetch_demo_image.py  gen_qualitative_fig.py  generate_figures.py  harvest_scope_c.sh  make_hero_figure.py  make_pareto.py  prep_700_eval.py  prep_distill_dataset.py  prepare_datasets.py  run_all_aws.sh  (+9 more)
(+115 files in other folders)
